apps/external-apps/photo-server/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: photo-server
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283

---
apiVersion: v1
kind: Endpoints
metadata:
  name: photo-server
  namespace: traefik
subsets:
  - addresses:
      - ip: 192.168.0.10
    ports:
      - port: 2283
